FIX DataTable height too small when going full-screen from a tab

--- a/Facades/js/openui5.template.css
+++ b/Facades/js/openui5.template.css
@@ -230,6 +230,7 @@ html.sap-phone .sapMWizard .sapMWizardNextButtonVisible {position: relative !imp
 
 /* Fullscreen */
 .fullscreen {position: fixed!important; top: 0; left: 0; z-index: 15!important; width: 100vw!important; height: 100vh!important; background: rgba(255,255,255);}
+.sapUiRespGrid.fullscreen > .sapUiRespGridSpanS12 {height: 100%}
 
 /* SegmentedButtons */
 .segmentedButtonsError {border-color: #b00 !important; border-width: 2px !important; color: #b00 !important;}
